@@ -7,6 +7,7 @@ apport (0.115) UNRELEASED; urgency=low
     name
   * Rename kernel_hook to kernel_crashdump (there are other kernel hooks)
   * Change kernel crash report type to KernelCrash
+  * Fix automatix.py to not crash when automatix isn't installed
 
   [ Martin Pitt ]
   * Add AUTHORS file for collecting the list of major contributors and
